--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My work</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     <header class="cabeçalho">
-        <img class="futebolimg" src="logofutebol.png">
+        <img class="futebolimg" src="logotipo.jpg">
         <ul class="cabeçalho-lista">
-            <li class="cabeçalho-lista-item">Sobre mim</li>
+            <li class="cabeçalho-lista-item">Clubes</li>
             <li class="cabeçalho-lista-item">Perfil</li>
         </ul>
     </header>
@@ -22,3 +26,11 @@
         <img class="escola_imagem">
 
     </section>
+
+<header class=rodape>
+   <img class="rodape" src="rodape.png">
+
+</header>
+
+
+</body>
